<resources>
    <string name="app_name">Altla Vision Builder</string>
    <string name="snackbar_find_plane_not_found">No plane.</string>
    <string name="snackbar_find_plane_tango_error">Can not detect a plane.</string>
    <string name="snackbar_find_plane_security_error">Permissions required.</string>
    <string name="text_view_select_image_in_device">Select image in device</string>
    <string name="dialog_select_image_methods_title">Select an image method</string>
    <string name="snackbar_image_file_not_found">Image file not found.</string>
    <string name="snackbar_unexpected_error_occured">Error.</string>
    <string name="snackbar_select_image">Select an image.</string>
    <string name="button_translate_object">TRANSLATE</string>
    <string name="button_rotate_object">ROTATE</string>
    <string name="button_scale_object">SCALE</string>
    <string name="button_translate_object_in_x_axis">X-axis</string>
    <string name="button_translate_object_in_y_axis">Y-axis</string>
    <string name="button_translate_object_in_z_axis">Z-axis</string>
    <string name="button_rotate_object_in_x_axis">X-axis</string>
    <string name="button_rotate_object_in_y_axis">Y-axis</string>
    <string name="button_rotate_object_in_z_axis">Z-axis</string>
    <string name="snackbar_google_api_client_connection_failed">Google Play Services error.</string>
    <string name="snackbar_google_sign_in_failed">Google Sign-In failed.</string>
    <string name="snackbar_google_sign_in_reqiured">Sign-in required.</string>
    <string name="progress_dialog_signin_in">Signing in...</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="progress_dialog_upload">Uploading...</string>
    <string name="snackbar_failed">Failed.</string>
    <string name="snackbar_done">Done.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_content_confirm_delete_texture">Are you sure you want to delete the selected texture ?</string>
    <string name="hint_edit_texure_name">The texture name.</string>
    <string name="toast_google_api_client_connection_failed">Google Play Services error.</string>

</resources>
