<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/view_top"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".presentation.view.fragment.MainFragment">

    <org.rajawali3d.view.TextureView
            android:id="@+id/texture_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <RelativeLayout android:id="@+id/view_group_object_menu"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_marginTop="@dimen/content_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

        <LinearLayout android:id="@+id/view_group_edit_object_menu"
                      android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <Button android:id="@+id/button_translate_object"
                    android:text="@string/button_translate_object"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_rotate_object"
                    android:text="@string/button_rotate_object"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_scale_object"
                    android:text="@string/button_scale_object"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout android:id="@+id/view_group_translate_object_menu"
                      android:layout_below="@id/view_group_edit_object_menu"
                      android:layout_marginTop="@dimen/content_vertical_margin"
                      android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <Button android:id="@+id/button_translate_object_in_x_axis"
                    android:text="@string/button_translate_object_in_x_axis"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_translate_object_in_y_axis"
                    android:text="@string/button_translate_object_in_y_axis"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_translate_object_in_z_axis"
                    android:text="@string/button_translate_object_in_z_axis"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout android:id="@+id/view_group_rotate_object_menu"
                      android:layout_below="@id/view_group_edit_object_menu"
                      android:layout_marginTop="@dimen/content_vertical_margin"
                      android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <Button android:id="@+id/button_rotate_object_in_x_axis"
                    android:text="@string/button_rotate_object_in_x_axis"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_rotate_object_in_y_axis"
                    android:text="@string/button_rotate_object_in_y_axis"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_rotate_object_in_z_axis"
                    android:text="@string/button_rotate_object_in_z_axis"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

        <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_toggle_model_pane"
                android:tint="@color/tint_fab_icon"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_expand_less_black_24dp"/>

        <LinearLayout
                android:id="@+id/view_group_model_pane"
                android:orientation="horizontal"
                android:background="@color/background_model_pane"
                android:layout_below="@id/fab_toggle_model_pane"
                android:layout_width="match_parent"
                android:layout_height="@dimen/model_pane_height">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageButton android:id="@+id/image_button_add_model"
                             android:src="@drawable/ic_add_black_24dp"
                             android:background="?android:attr/actionBarItemBackground"
                             android:tint="@color/tint_image_button"
                             android:layout_marginStart="@dimen/content_horizontal_margin"
                             android:layout_marginEnd="@dimen/content_horizontal_margin"
                             android:layout_marginTop="@dimen/content_vertical_margin"
                             android:layout_width="@dimen/touch_target_width"
                             android:layout_height="@dimen/touch_target_height"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>

    <!--<com.google.atap.tango.ux.TangoUxLayout-->
    <!--android:id="@+id/layout_tango_ux"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"/>-->

</FrameLayout>
